# otus_mlops_cdc_api

./: .env.sample  .gitignore  Dockerfile  pyproject.toml
src/: main.py
src/api/v1/: predict.py
src/core/: config.py
src/schemas/: prediction.py
src/services/: prediction.py
