[tool.poetry]
name = "otus-mlops-cdc-api"
version = "0.1.0"
description = ""
authors = ["inna-tuzhikova <inna-tuzhikova@github.com>"]
readme = "README.md"
packages = [{include = "otus_mlops_cdc_api"}]

[tool.poetry.dependencies]
python = "~3.9.16"
fastapi = "0.79.0"
uvicorn = "0.18.2"
python-dotenv = "0.21.0"
python-multipart = "0.0.6"
torch = {version = "2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
mlflow = "2.4.1"
boto3 = "1.26.153"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
